Closed Bug 162326 Opened 23 years ago Closed 23 years ago

550 errors cause throbber to spin endlessly

Categories

(Core Graveyard :: Networking: FTP, defect)

x86
Windows 2000
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: dougt, Assigned: dougt)

Details

Attachments

(2 files, 1 obsolete file)

if a file doesn't have the right permission, ftp does not send onStart/onStop.
Attached patch patch v.1 (obsolete) — Splinter Review
Attachment #94931 - Flags: superreview+
Comment on attachment 94931 [details] [diff] [review] patch v.1 sr=darin, but bbaetz really needs to review this.
so this happens with any situation a 550 is returned?
Comment on attachment 94931 [details] [diff] [review] patch v.1 Yeah, this looks fine. r=bbaetz
Attachment #94931 - Flags: review+
Checking in nsFtpConnectionThread.cpp; /cvsroot/mozilla/netwerk/protocol/ftp/src/nsFtpConnectionThread.cpp,v <-- nsFtpConnectionThread.cpp new revision: 1.242; previous revision: 1.241 done Checking in nsFtpConnectionThread.h; /cvsroot/mozilla/netwerk/protocol/ftp/src/nsFtpConnectionThread.h,v <-- nsFtpConnectionThread.h new revision: 1.98; previous revision: 1.97 done
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Doug: can you give a sample URL and describe what you meant by "spin?" (Can't verify if I don't know what I'm looking for).
put a file up on your ftp server with no permissions (chmod 000 foo), then try to download it. you can look at ftp://z.mcom.com/ (my nscp internal box) for two examples.
Using that link, I get a "530 Can't set guest privileges." (using Mozilla 1.1b, Mac OS X) I took a quick look at a file on my server that has no read permissions, and the throbber does run while the error is displayed, then it says "document has no data". Is this what you were looking at?
just create two files on your unix box. chmod them to have no permission. then try to reproduce. my box doesn't know who you are... no nis/yp installed or ftp guest access.
I think I've got the test case you are suggesting, but my observed behavior is different. I'm seeing two things that might be wrong: 1- The throbber runs while the error message is up. 2- I get "document contains no data" at the end.
1- The throbber runs while the error message is up. expected. 2- I get "document contains no data" at the end. really. that should not be the case. what is the url that your using so that i can try it?
Doug, I tried the patch, it does not make any difference in embedding client. It still behavior the same way with/out the patch. 1) Have FTP server running... ( I an using IIS ) 2) Go to the root of ftp site, which has one file with NO ACCESS. 3) Try to retreive the file, and make sure you get 550 error. 4) Now stop the FTP server. 5) Try again on file. Embedding client ==> Let me save to ZERO byte file. Mozilla and MFC Embedding ==> Error AFTER Save AS box. I tried on 8/4/02 trunk ( before the patch checked in ) and 9/8/2002. Both eventually work the same way, which is it eventually put error msg about not being able to read from server file AFTER save as box, except 8/4/02's Mozilla skips save as box directly to error msg. Any thoughts ? P.S.: Will put the jpeg image on error dialog. Thanks.
This is error msg I was talkig about in previous comment. Thanks
OK. Just a quick summary of an email conversation I had with Doug: 1) The ftp channel will pop up an alert when an error occurs saying that the error occured. It will then call OnStopRequest with an error code. 2) The save-as code will pop up an error alert (like what you see in attachment 98491 [details]) if its OnStopRequest is called with an error code. It has to do this to handle protocols, like HTTP, for which the channel does no error notification of its own. So you are seeing two alerts for the same error.
Ok... Here we go again. I am using 1.0.1 for embedding client. I tested the test case with 1.0 build of mozilla and it has the behavior I was talking about. ( So as the 1.0.1 build I am using. ) First since those builds do not have this bug's patch, it hangs. But besides the hanging, it let me save to to zero content file. I tested with /pub/mozilla/nightly/2002-09-09-08-1.0 STR is 1) Have FTP server running... ( I an using IIS ) 2) Go to the root of ftp site, which has one file with NO ACCESS. 3) Try to retreive the file, and make sure you get 550 error. ==> It hangs after, diff from trunk build which has the patch for this bug. 4) Now stop the FTP server. 5) Try again on file. It lets you save to zero byte file withouot any error. Can anyone look at that and fix the problem in those branches ? Thanks.
Attached patch Updated patchSplinter Review
Attached is an update patch which fixes a bug bz found in the first patch (shift clicking links resulted in two loads). Hansoo, are you able to apply and test this patch? This does not fix (or tries to fix) the screen shot you reported. This is being addressed in another bug.
Attachment #94931 - Attachment is obsolete: true
Doug, Yes I tried the patch and hanging part is fixed by this patch. Can you tell me then which bug is addressing the problem I was talking about in my last few comments ? Thanks
I am asking for permission to check the patch into the branch. I think we need to create a new bug for the download problem which you have described in this bug. I had though that there was a different bug, but I guess not.
Is this Win only? I was able to reproduce it only on Win98 on mozilla 1.1.
Doug... Are you landing this on 1.0.1 branch soon ? Thanks.
I have sent mail to drivers@mozilla.org and am waiting a response.
Comment on attachment 94931 [details] [diff] [review] patch v.1 a=rjesup@wgate.com for 1.0 branch. Change mozilla1.0.2+ to fixed1.0.2 when checked in.
Attachment #94931 - Flags: approval+
fixed. Checking in nsFtpConnectionThread.cpp; /cvsroot/mozilla/netwerk/protocol/ftp/src/nsFtpConnectionThread.cpp,v <-- nsFtpConnectionThread.cpp new revision: 1.237.2.6; previous revision: 1.237.2.5 done Checking in nsFtpConnectionThread.h; /cvsroot/mozilla/netwerk/protocol/ftp/src/nsFtpConnectionThread.h,v <-- nsFtpConnectionThread.h new revision: 1.96.4.2; previous revision: 1.96.4.1 done
VERIFIED: win 98, Mozilla 1.2a does not have problem, Mozilla 1.1 did. I checked Mac OS X and Linux to make sure they did not have this specfic problem.
Status: RESOLVED → VERIFIED
Summary: 550 errors cause ftp to spin → 550 errors cause throbber to spin endlessly
Please verify the bug. Once verified, change the keyword fixed1.0.2 to verified1.0.2
VERIFIED/BRANCH: Mozilla/5.0 (Macintosh; U; PPC Mac OS X; en-US; rv:1.0.2) Gecko/20020924 Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.0.2) Gecko/20020924 Mozilla/5.0 (Windows; U; Win98; en-US; rv:1.0.2) Gecko/20020924 I think you get bug 151935 fixed for free on Mac OS and Linux too, because they don't happen anymore in 1.2 or 1.0.2.
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: