550 errors cause ftp to spin. r=bbaetz, sr=darin, a=rjesup@wgate.com, b=162326