mozilla/netwerk/protocol/ftp/src/nsFtpConnectionThread.h
@@ -161,7 +161,9 @@ private:
     nsresult    Process();
 
     void KillControlConnection();
-    nsresult StopProcessing();
+    // Set aPreventNotification to true if StopProcessing should not
+    // notify the listener.
+    nsresult StopProcessing(PRBool aPreventNotification = PR_FALSE);
     nsresult EstablishControlConnection();
     nsresult SendFTPCommand(nsCString& command);
     nsresult BuildStreamConverter(nsIStreamListener** convertStreamListener);
@@ -219,7 +221,6 @@ private:
     PRUint32               mBufferMaxSize;
     PRLock                 *mLock;
     nsCOMPtr<nsIInputStream> mWriteStream; // This stream is written to the server.
-    PRPackedBool           mFireCallbacks; // Fire the listener callback.
     PRPackedBool           mIPv6Checked;
     nsCOMPtr<nsIPrompt>    mPrompter;
     nsCOMPtr<nsIFTPEventSink>       mFTPEventSink;
